Added split.py into ScriptCommands repository.Changed logic in native_export.py in ScriptCommands repository. Changed logic in saver.py in ObjectExplorer repository.

--- a/ScriptCommands/config.json
+++ b/ScriptCommands/config.json
@@ -10,5 +10,10 @@
                 "Icon": "import.ico",
                 "Path": "native_import.py"
         }
-		
+		,
+		{
+                "Name":"Split",
+                "Icon": "import.ico",
+                "Path": "split.py"
+        }
 ]
